--- a/app/src/main/res/layout/nav_home.xml
+++ b/app/src/main/res/layout/nav_home.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@drawable/binback"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/teal_700"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    tools:context=".Home">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="70dp"
@@ -14,15 +16,17 @@
         android:src="@drawable/baseline_account_circle_24"/>
 
     <TextView
+        android:id="@+id/accountName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Account Holder name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
+        android:id="@+id/editProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accountholder Email"
+        android:text="Edit Profile"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 </LinearLayout>
