--- a/app/src/main/res/layout/nav_home.xml
+++ b/app/src/main/res/layout/nav_home.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="176dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/teal_700"
+    android:background="@color/purple_700"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
@@ -19,7 +19,7 @@
         android:id="@+id/accountName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Account Holder name"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
